tests/ui/variable_bits/zero_size_not_allowed.stderr
error: variable_bits sizes must be greater than 0
 --> tests/ui/variable_bits/zero_size_not_allowed.rs:4:17
  |
4 | #[variable_bits(0, 8)]  // Zero size not allowed
  |                 ^
